added the HTML structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Weather App</h1>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Kyiv</h1>
+        <p>Tuesday 15:06</p>
+        <div class="row">
+          <div class="col-6">
+            <ul>
+              <li>Humidity: 87%</li>
+              <li>Wind: 5.9 km/h</li>
+            </ul>
+          </div>
+          <div class="col-6"><img href="#" />23°C | °F</div>
+        </div>
+      </div>
+      <small
+        ><a href="https://github.com/sim-etra/weather-app">Open-sourced code</a>
+        by Diana🦋</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
