--- a/index.html
+++ b/index.html
@@ -11,27 +11,48 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>Kyiv</h1>
-        <p>Tuesday 15:06</p>
+        <header>
+          <h1>Kyiv</h1>
+          <p>Tuesday 15:06</p>
+        </header>
+        <hr />
         <div class="row">
           <div class="col-6">
-            <ul>
-              <li>Humidity: 87%</li>
-              <li>Wind: 5.9 km/h</li>
-            </ul>
+            <div class="weather-description">
+              <ul>
+                <li class="weather-condition">Clear sky</li>
+                <li>Humidity: <strong>87</strong>%</li>
+                <li>Wind speed: <strong>4.05</strong> km/h</li>
+              </ul>
+            </div>
           </div>
-          <div class="col-6"><img href="#" />23°C | °F</div>
+          <div class="col-6 d-flex">
+            <span class="temperature">
+              <i class="bi bi-brightness-high"></i>
+
+              23</span
+            >
+            <span class="units">°C | °F</span>
+          </div>
         </div>
+        <footer>
+          <small
+            ><a href="https://github.com/sim-etra/weather-app" target="_blank"
+              >Open-sourced code</a
+            >
+            by Diana🦋</small
+          >
+        </footer>
       </div>
-      <small
-        ><a href="https://github.com/sim-etra/weather-app">Open-sourced code</a>
-        by Diana🦋</small
-      >
     </div>
     <script src="src/app.js"></script>
   </body>
