--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,26 +22,23 @@
     <div class="container">
       <div class="weather-app">
         <header>
-          <h1>Kyiv</h1>
-          <p>Tuesday 15:06</p>
+          <h1 id="city"></h1>
+          <p>Last update: <span class="current-date" id="date"></span></p>
         </header>
         <hr />
         <div class="row">
           <div class="col-6">
             <div class="weather-description">
               <ul>
-                <li class="weather-condition">Clear sky</li>
-                <li>Humidity: <strong>87</strong>%</li>
-                <li>Wind speed: <strong>4.05</strong> km/h</li>
+                <li class="weather-condition" id="description"></li>
+                <li>Humidity: <strong id="humidity"></strong>%</li>
+                <li>Wind speed: <strong id="wind-speed"></strong> km/h</li>
               </ul>
             </div>
           </div>
           <div class="col-6 d-flex">
-            <span class="temperature">
-              <i class="bi bi-brightness-high"></i>
-
-              23</span
-            >
+            <i class="bi bi-brightness-high weather-icon"></i>
+            <span class="temperature" id="temperature"></span>
             <span class="units">°C | °F</span>
           </div>
         </div>
