added SVG and filters for each

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
             </div>
           </div>
           <div class="col-6 d-flex">
-            <i class="bi bi-brightness-high weather-icon"></i>
+            <img
+              src=""
+              alt="Bootstrap"
+              width="72"
+              height="72"
+              class="weather-icon"
+              id="icon"
+            />
             <span class="temperature" id="temperature"></span>
             <span class="units">°C | °F</span>
           </div>
