Added the js templates for forecast

--- a/index.html
+++ b/index.html
@@ -67,23 +67,7 @@
             >
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="forecast-date">Mon</div>
-              <img
-                src="file:///C:/Users/Diana/SheCodes/weather-app/svg/03n.svg"
-                alt="Bootstrap"
-                width="40"
-                height="40"
-              />
-              <div class="forecast-temp">
-                <span class="forecast-temp-max">25°</span>
-                <span class="forecast-temp-min">16°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
         <footer>
           <small
             ><a href="https://github.com/sim-etra/weather-app" target="_blank"
