--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             placeholder="Type a city..."
             autocomplete="off"
           />
-          <input type="button" value="📍" class="input-group-text gps-search" />
+          <input
+            type="button"
+            value="📍"
+            class="input-group-text gps-search"
+            id="gps-search"
+          />
           <input
             type="submit"
             value="Search"
