--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <ul>
                 <li class="weather-condition" id="description"></li>
                 <li>Humidity: <strong id="humidity"></strong>%</li>
-                <li>Wind speed: <strong id="wind-speed"></strong> km/h</li>
+                <li>Wind speed: <strong id="wind-speed"></strong> m/h</li>
               </ul>
             </div>
           </div>
@@ -66,10 +66,7 @@
               id="icon"
             />
             <span class="temperature" id="temperature"></span>
-            <span class="units"
-              ><a href="#" id="celsius-link" class="active">°C</a> |
-              <a href="#" id="fahrenheit-link">°F</a></span
-            >
+            <span class="units">°C </span>
           </div>
         </div>
         <div class="weather-forecast" id="forecast"></div>
